--- a/.gitignore
+++ b/.gitignore
@@ -9,8 +9,10 @@ input
 MetSim-tutorial-master
 usgs_streamflow
 z_old
+z_trash/
 input/*
 MetSim-tutorial-master/*
 usgs_streamflow/*
 z_old/*
+z_trash/*
 .ipynb_checkpoints/*
